corpus/m.txt
===
ls
===
(1 2
 3)
---
(k (list (seq (lit (intv)) (lit (int1)))))

===
ls*
===
(1 2
3)
---
(k k: (list (seq (map f: (lit (intv)) (ERROR) a: (lit (int1))))))

===
nb1
===
foo:+/ /hi
---
(k k: (pass v: (lit (var)) a: (pmap v: (avd f: (op) a: (a)))) (nb))

===
nb2
===
(1  /one
 2) /two
---
(k (list (seq (lit (int1)) (nb) (lit (int1)))) (nb))

===
nb3
===
+  /oh
:+ /ok
---
(k (op) (nb) (pexp (pmap (op))) (nb))
